# api/openapi.json
@@ -177,19 +177,6 @@
                 ],
                 "additionalProperties": false
             },
-            "UserNotFound": {
-                "type": "object",
-                "properties": {
-                    "code": {
-                        "type": "string",
-                        "const": "USER_NOT_FOUND"
-                    }
-                },
-                "required": [
-                    "code"
-                ],
-                "additionalProperties": false
-            },
             "TokenExpired": {
                 "type": "object",
                 "properties": {
@@ -700,24 +687,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "anyOf": [
-                                        {
-                                            "$ref": "#/components/schemas/EmailVerificationNotFound"
-                                        },
-                                        {
-                                            "$ref": "#/components/schemas/UserNotFound"
-                                        }
-                                    ]
-                                }
-                            }
-                        }
-                    },
-                    "409": {
-                        "description": "Default Response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/EmailAlreadyVerified"
+                                    "$ref": "#/components/schemas/EmailVerificationNotFound"
                                 }
                             }
                         }
